# RailMind

./: .env.example  .gitignore  README.md  pyproject.toml
data/: qa.json  raw_data.xlsx
docs/: llm_dev_experience.md  v010_dev.md
frontend/: index.html
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ReActTimeline.tsx
railmind/: config.py  main.py  utils.py
railmind/agent/: base_agent.py  react_agent.py  state.py  workflow_define.py
railmind/api/: routes.py  schemas.py
railmind/api/enum/: think_model.py
railmind/function_call/: __init__.py  kg_functions.py  kg_tools.py
railmind/operators/: intent_recognizer.py  logger.py  memory.py  query_rewriter.py  result_evaluator.py
railmind/operators/build_kg/: kg_builder.py
railmind/operators/generate/: generate_qas.py
railmind/operators/llm/: llm_cli.py
railmind/operators/model/: qa_generator_model.py
railmind/operators/templates/: answer_generate.py  eval_result.py  intention.py  qa_generator.py  think.py
resource/docs/: v010_dev.md
scripts/: test_batch_query.py  test_query.py
tests/: global_test.py  kg_test.py  tool_test.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts  index.css
