[tool.poetry]
name = "railmind"
version = "0.1.0"
description = "ReAct Agent with Knowledge Graph using LangGraph and Neo4j"
authors = ["Elian <lizimo@nuist.edu.cn>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
langchain = "^0.1.0"
langgraph = "^0.0.20"
langchain-openai = "^0.0.2"
neo4j = "^5.14.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
redis = "^5.0.0"
httpx = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.11.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
